重构记录类 ExtractRules 和 AssetObject，使用紧凑构造函数和 @Unmodifiable 注解